@@ -506,11 +506,11 @@ Patch Structure --- Lead Engine
 0x160 | 
 ------+--------------------------------------------------------------------------
 0x161 |
- ...  | Trigger Matrix Node: Global Clock / 4 (same structure as for Note On)
+ ...  | Trigger Matrix Node: Global Clock / 6 (same structure as for Note On)
 0x163 | 
 ------+--------------------------------------------------------------------------
 0x164 |
- ...  | Trigger Matrix Node: Global Clock / 16 (same structure as for Note On)
+ ...  | Trigger Matrix Node: Global Clock / 24 (same structure as for Note On)
 0x166 | 
 ------+--------------------------------------------------------------------------
 0x167 |
