@@ -436,6 +436,11 @@ MIDIboxSID V2.0
   o SusKey and Legato flags now accessible in Bassline CFG menu
   o Individual Attack/Decay/Release Curve assignments now accessible in
     Multi/Bassline ENV menu
+  o Trigger Matrix: since the BPM clock generator concept has been changed in
+    one of the previous releases, we now have a Clk/6 and Clk/24 trigger instead
+    of Clk/4 and Clk/16
+  o LFO and ENV MIDI sync working properly again
+  o portamento omitted after patch change when first key is played
 
 
 MEMO:
